--- a/documentation/Big-Data-&-Analytics/Data-Visualization/TOC.yml
+++ b/documentation/Big-Data-&-Analytics/Data-Visualization/TOC.yml
@@ -6,5 +6,22 @@ items:
     - name: Billing Overview
       href: Pricing/Billing-Overview.md
 - name: Operation Guide
-  href: Operation-Guide/guide.md
-          
+  items:
+    - name: 1. Log in JD Cloud
+      href: Operation-Guide/login.md
+    - name: 2. My Data Visualization Screen
+      href: Operation-Guide/Mydashboard.md
+    - name: 3 Configuration of Basic Chart Component
+      href: Operation-Guide/BasicChart.md
+    - name: 4. Map Component Configuration
+      href: Operation-Guide/Map.md
+    - name: 5. Text Component Configuration
+      href: Operation-Guide/text.md
+    - name:  6. Interaction Component Configuration
+      href: Operation-Guide/Interactive.md
+    - name:  7. Auxiliary Component Configuration
+      href: Operation-Guide/other.md
+    - name:  8. Preview/Release of Data Visualization
+      href: Operation-Guide/preview.md
+    - name: 9. Data Source Management
+      href: Operation-Guide/database.md
