--- a/API/Key-Management-Service/TOC.yml
+++ b/API/Key-Management-Service/TOC.yml
@@ -11,65 +11,65 @@
     items:
       - name: key Management API
         items:
-          - name: Create new keys
+          - name: CreateKey
             href: Key-Management-Service/createKey.md
-          - name: Enable keys
+          - name: EnableKey
             href: Key-Management-Service/enableKey.md
-          - name: Disable keys
+          - name: DisableKey
             href: Key-Management-Service/disableKey.md
-          - name: Plan to delete keys
+          - name: ScheduleKeyDeletion
             href: Key-Management-Service/scheduleKeyDeletion.md
-          - name: Cancel keys planned to be deleted
+          - name: CancelKeyDeletion
             href: Key-Management-Service/cancelKeyDeletion.md
-          - name: Update key description
+          - name: UpdateKeyDescription
             href: Key-Management-Service/updateKeyDescription.md
           - name: Encrypt
             href: Key-Management-Service/encrypt.md
           - name: Decrypt
             href: Key-Management-Service/decrypt.md
-          - name: Produce data key
+          - name: GenerateDataKey
             href: Key-Management-Service/generateDataKey.md	
-          - name: Rotate key
+          - name: KeyRotation
             href: Key-Management-Service/keyRotation.md
-          - name: Obtain key information
+          - name: DescribeKey
             href: Key-Management-Service/describeKey.md
-          - name: Obtain key details
+          - name: DescribeKeyDetail
             href: Key-Management-Service/describeKeyDetail.md
-          - name: Obtain key list
+          - name: DescribeKeyList
             href: Key-Management-Service/describeKeyList.md
-          - name: Disable key version
+          - name: DisableKeyVersion
             href: Key-Management-Service/disableKeyVersion.md
-          - name: Enable key version
+          - name: EnableKeyVersion
             href: Key-Management-Service/enableKeyVersion.md
-          - name: key Version Planned to be Deleted
+          - name: ScheduleKeyVersionDeletion
             href: Key-Management-Service/scheduleKeyVersionDeletion.md
-          - name: Cancel key version planned to be deleted
+          - name: CancelKeyVersionDeletion
             href: Key-Management-Service/cancelKeyVersionDeletion.md
       - name: Confidential Data Management API
         items:
-          - name: Create confidential data
+          - name: CreateSecret
             href: Secret-Management-Service/createSecret.md
-          - name: Delete confidential data
+          - name: DeleteSecret
             href: Secret-Management-Service/deleteSecret.md
-          - name: Enable confidential data
+          - name: EnableSecret
             href: Secret-Management-Service/enableSecret.md
-          - name: Disable confidential data
+          - name: DisableSecret
             href: Secret-Management-Service/disableSecret.md
-          - name: Update confidential data description
+          - name: UpdateSecret
             href: Secret-Management-Service/updateSecret.md
-          - name: Obtain confidential data list
+          - name: DescribeSecretList
             href: Secret-Management-Service/describeSecretList.md
-          - name: Create confidential data version
+          - name: CreateSecretVersion
             href: Secret-Management-Service/createSecretVersion.md
-          - name: Delete confidential data version
+          - name: DeleteSecretVersion
             href: Secret-Management-Service/deleteSecretVersion.md
-          - name: Enable confidential data version
+          - name: EnableSecretVersion
             href: Secret-Management-Service/enableSecretVersion.md
-          - name: Disable confidential data version
+          - name: DisableSecretVersion
             href: Secret-Management-Service/disableSecretVersion.md
-          - name: Update confidential data version information
+          - name: UpdateSecretVersion
             href: Secret-Management-Service/updateSecretVersion.md
-          - name: Obtain confidential data version information
+          - name: DescribeSecretVersionInfo
             href: Secret-Management-Service/describeSecretVersionInfo.md
-          - name: Obtain confidential data version list
+          - name: DescribeSecretVersionList
             href: Secret-Management-Service/describeSecretVersionList.md
