--- a/documentation/User-Service/Account-Management/TOC.yml
+++ b/documentation/User-Service/Account-Management/TOC.yml
@@ -9,3 +9,5 @@
     href: Change-The-Phone-Number.md
   - name: AccessKey Management
     href: AccessKey-Management.md
+  - name: Account Cancellation
+    href: Account-Revocation.md
