--- a/documentation/Middleware/API-Gateway/TOC.yml
+++ b/documentation/Middleware/API-Gateway/TOC.yml
@@ -37,6 +37,10 @@ items:
   items:
     - name: Overview
       href: Getting-Started/Getting-Started.md
+    - name: Use examples to construct API in the console
+      href: Getting-Started/example_console.md
+    - name: Use Function to construct API
+      href: Getting-Started/example_function.md
     - name: Create API Groups
       href: Getting-Started/STEP1-Create-APIGroup.md
     - name: Create APIs
