--- a/documentation/Service-Agreements-and-Guarantees/Product-Service-Agreement/TOC.yml
+++ b/documentation/Service-Agreements-and-Guarantees/Product-Service-Agreement/TOC.yml
@@ -26,6 +26,8 @@ items:
     href: Caching-Redis-Service-Level-Agreement-SLA.md
   - name: JCS for Memcached Service Agreement
     href: JCS-for-Memcached-Service-Terms.md
+  - name: JCS for Memcached Service Level Agreement (SLA)
+    href: JCS-for-Memcached-Service-TermsSLA.md
   - name: CDN Service Agreement
     href: CDN-Terms-Of-Service.md
   - name: CDN Service Level Agreement (SLA)
@@ -58,7 +60,7 @@ items:
     href: Video-Live-Service-Clause.md
   - name: SSL Digital Certificate Service Agreement
     href: SSL-Digital-Certificate-Service-Clause.md
-  - name: JD Cloud DNS Service Agreement
+  - name: Cloud Resolution Service Agreement
     href: Cloud-Parsing-Service-Clause.md
   - name: Trial TiDB Service Terms
     href: Distributed-Database-TiDB-Trial-Service-Clause.md
