Add new and updated files based on cn190103

--- a/documentation/Middleware/JCS-for-Elasticsearch/TOC.yml
+++ b/documentation/Middleware/JCS-for-Elasticsearch/TOC.yml
@@ -47,6 +47,8 @@
           href: Getting-Started/Delete-ES.md
   - name: Operation Guide
     items:
+      - name: Dedicated Primary Node
+        href: Operation-Guide/Dedicated-master.md
       - name: Access Cluster
         href: Operation-Guide/connect-ES.md
       - name: Use kibana
