--- a/documentation/Middleware/Message-Queue/TOC.yml
+++ b/documentation/Middleware/Message-Queue/TOC.yml
@@ -59,6 +59,14 @@
             href: Operation-Guide/Monitoring/Monitoring.md
           - name: Set Alarm Rules
             href: Operation-Guide/Monitoring/Alarm-Rules.md
+      - name: Authorization Management
+        items:
+          - name: Permission Control Overview
+            href: Operation-Guide/Authorization-Management/Authorization-Overview.md
+          - name: Primary-primary Account Authorization
+            href: Operation-Guide/Authorization-Management/Main-Main-Authorization.md
+          - name: Primary-sub-account Authorization
+            href: Operation-Guide/Authorization-Management/Main-Sub-Authorization.md
       - name: API Reference
         items:
           - name: Invoke Method
@@ -99,7 +107,8 @@
             href: SDK-Rerference/Java-SDK/Pull-Consume-Messgae-SDK.md
   - name: Best Practices
     items:
-    status: 0
+      - name: Message Category
+        href: Best-Practice/Message-Classification.md
   - name: Tutorial
     items:
     status: 0
