--- a/documentation/Elastic-Compute/Cloud-Disk-Service/TOC.yml
+++ b/documentation/Elastic-Compute/Cloud-Disk-Service/TOC.yml
@@ -1,4 +1,3 @@
-
   name: Cloud Disk Service
   href:
   items:
@@ -15,26 +14,27 @@
       - name: Application Scenarios
         href: Introduction/Application-Scenarios.md
       - name: Specifications
-        href: Introduction/Specification.md
+        href: Introduction/Specifications.md
+      - name: Cloud Disk Encryption
+        href: Introduction/Disk-Encrypt.md
       - name: Use Method of Multi-point Attached Cloud Disk Service
         href: Introduction/Multiattachdisk.md
       - name: Performance Test
         href: Introduction/Performance-Test.md
       - name: Restrictions
-        href: Introduction/Restrictions.md
-        
+        href: Introduction/Restrictions.md       
   - name: Pricing
     items:
     - name: Description of Billing Method
       items:
-          - name: Billing Rules
-            href: Pricing/Billing-Mode-Instructions/Billing-Rules.md
-          - name: Renewal Rules
-            href: Pricing/Billing-Mode-Instructions/Renew-Rules.md
-          - name: Expiration & Overdue Rules
-            href: Pricing/Billing-Mode-Instructions/Owe-Rules.md
-          - name: Expiration & Overdue Remind
-            href: Pricing/Billing-Mode-Instructions/Owe-Remind.md
+        - name: Billing Rules
+          href: Pricing/Billing-Mode-Instructions/Billing-Rules.md
+        - name: Renewal Rules
+          href: Pricing/Billing-Mode-Instructions/Renew-Rules.md
+        - name: Expiration & Overdue Rules
+          href: Pricing/Billing-Mode-Instructions/Owe-Rules.md
+        - name: Expiration & Overdue Remind
+          href: Pricing/Billing-Mode-Instructions/Owe-Remind.md
     - name: Price Overview
       href: Pricing/Price-Overview.md
     - name:  Purchase Channel
@@ -44,49 +44,47 @@
         
   - name: Operation Guide
     items:
-       - name: Create Cloud Disk
-         href: Getting-Started/Cloud-Disk/Create-Cloud-Disk.md
-       - name: Create Disk from Snapshot
-         href: Getting-Started/Cloud-Disk/Create-Disk-by-Snapshot.md
-       - name: Attach Cloud Disk
-         href: Getting-Started/Cloud-Disk/Attach-Cloud-Disk.md
-       - name: Cloud Disk Service partitioning, formatting, online and creating file system
-         items:
-            - name: Linux partitioning, formatting and creating file system
-              href: Getting-Started/Cloud-Disk/Parted-Format/Linux-Partition.md
-            - name: Windows partitioning, formatting and creating file system
-              href: Getting-Started/Cloud-Disk/Parted-Format/Windows-Partition.md
+    - name: Create Cloud Disk
+      href: Getting-Started/Cloud-Disk/Create-Cloud-Disk.md
+    - name: Create Disk from Snapshot
+      href: Getting-Started/Cloud-Disk/Create-Disk-by-Snapshot.md
+    - name: Attach Cloud Disk
+      href: Getting-Started/Cloud-Disk/Attach-Cloud-Disk.md
+    - name: Cloud Disk Service partitioning, formatting, online and creating file system
+      items:
+        - name: Linux partitioning, formatting and creating file system
+          href: Getting-Started/Cloud-Disk/Parted-Format/Linux-Partition.md
+        - name: Windows partitioning, formatting and creating file system
+          href: Getting-Started/Cloud-Disk/Parted-Format/Windows-Partition.md
          
-       - name: Cloud Disk Service capacity upgrading
-         href: Getting-Started/Cloud-Disk/Disk-Expand.md
-       - name: file system expansion
-         items:
-            - name: Cloud Disk Service expansion overview
-              href: Getting-Started/Cloud-Disk/Expand-Filesystem/Cloud-Disk-Expansion-Overview.md
-
-            - name: file system expansion (Windows)
-              href: Getting-Started/Cloud-Disk/Expand-Filesystem/Expand-File-System-Windows.md
-            - name: file system expansion (Linux)
-              href: Getting-Started/Cloud-Disk/Expand-Filesystem/Expand-File-System-Linux.md
-            - name: raw disk file system expansion (Linux)
-              href: Getting-Started/Cloud-Disk/Expand-Filesystem/Expand-Raw-Disk-File-System.md
-            - name: file system expansion (multi partition)
-              href: Getting-Started/Cloud-Disk/Expand-Filesystem/Expand-File-System-Multi-Partition.md
-
-       - name: Detach Cloud Disk
-         href: Getting-Started/Cloud-Disk/Detach-Cloud-Disk.md
-       - name: Delete Cloud Disk Service
-         href: Getting-Started/Cloud-Disk/Delete-Cloud-Disk.md
-       - name: Cloud Disk Service Monitoring
-         href: Getting-Started/Cloud-Disk/CDS-Monitoring.md
+    - name: Cloud Disk Service capacity upgrading
+      href: Getting-Started/Cloud-Disk/Disk-Expand.md
+    - name: file system expansion
+      items:
+        - name: Cloud Disk Service expansion overview
+          href: Getting-Started/Cloud-Disk/Expand-Filesystem/Cloud-Disk-Expansion-Overview.md
+        - name: file system expansion (Windows)
+          href: Getting-Started/Cloud-Disk/Expand-Filesystem/Expand-File-System-Windows.md
+        - name: file system expansion (Linux)
+          href: Getting-Started/Cloud-Disk/Expand-Filesystem/Expand-File-System-Linux.md
+        - name: raw disk file system expansion (Linux)
+          href: Getting-Started/Cloud-Disk/Expand-Filesystem/Expand-Raw-Disk-File-System.md
+        - name: file system expansion (multi partition)
+          href: Getting-Started/Cloud-Disk/Expand-Filesystem/Expand-File-System-Multi-Partition.md
+        - name: Detach Cloud Disk
+          href: Getting-Started/Cloud-Disk/Detach-Cloud-Disk.md
+        - name: Delete Cloud Disk Service
+          href: Getting-Started/Cloud-Disk/Delete-Cloud-Disk.md
+        - name: Cloud Disk Service Monitoring
+          href: Getting-Started/Cloud-Disk/CDS-Monitoring.md
           
   - name: Operation Guide
     items:
-       - name: Create Cloud Disk Snapshot
-         href: Operation-Guide/Cloud-Disk-Snapshot/Create-CloudDisk-SnapShot.md
-       - name: Restore Cloud Disk
-         href: Operation-Guide/Cloud-Disk-Snapshot/Recover-CloudDisk.md
-       - name: Delete Snapshot
-         href: Operation-Guide/Cloud-Disk-Snapshot/Deletion-Snapshot.md
+    - name: Create Cloud Disk Snapshot
+      href: Operation-Guide/Cloud-Disk-Snapshot/Create-CloudDisk-SnapShot.md
+    - name: Restore Cloud Disk
+      href: Operation-Guide/Cloud-Disk-Snapshot/Recover-CloudDisk.md
+    - name: Delete Snapshot
+      href: Operation-Guide/Cloud-Disk-Snapshot/Deletion-Snapshot.md
   - name: FAQ
     href: FAQ/FAQ.md
