Update Files based on cn190110

--- a/documentation/Storage-and-CDN/CDN/TOC.yml
+++ b/documentation/Storage-and-CDN/CDN/TOC.yml
@@ -25,6 +25,7 @@
         href: Pricing/Billing-Overview.md
       - name: Billing Change
         href: Pricing/Billing-change.md
+        status: 0
       - name: Arrearage Description
         href: Pricing/Arrears.md
   - name: Getting Started
