--- a/documentation/Middleware/Message-Queue/TOC.yml
+++ b/documentation/Middleware/Message-Queue/TOC.yml
@@ -67,7 +67,7 @@
             href: Operation-Guide/Authorization-Management/Main-Main-Authorization.md
           - name: Primary-sub-account Authorization
             href: Operation-Guide/Authorization-Management/Main-Sub-Authorization.md
-      - name: API Reference
+      - name: API Reference (receiving and sending of HTTP messages)
         items:
           - name: Invoke Method
             items:
