--- a/documentation/Developer-Tools/CodeDeploy/TOC.yml
+++ b/documentation/Developer-Tools/CodeDeploy/TOC.yml
@@ -29,7 +29,7 @@
         href: Getting-Started/Create-VM.md
       - name: Create Application and Deployment Group
         href: Getting-Started/Create-Application1.md
-      - name: Create Deployment
+      - name: Initiate deployment
         href: Getting-Started/Create-Deployment1.md
       - name: View Deployment Details
         href: Getting-Started/Details1.md
@@ -53,7 +53,7 @@
         href: Operation-Guide/Edit-Deployment-Group.md
       - name: Details of Deployment Group
         href: Operation-Guide/Deployment-Group-Detail.md
-      - name: Create Deployment
+      - name: Initiate deployment
         href: Operation-Guide/Create-Deployment2.md
       - name: Deployment History
         href: Operation-Guide/Deployment-History.md
