--- a/documentation/Storage-and-CDN/CDN/TOC.yml
+++ b/documentation/Storage-and-CDN/CDN/TOC.yml
@@ -25,7 +25,6 @@
         href: Pricing/Billing-Overview.md
       - name: Billing Change
         href: Pricing/Billing-change.md
-        status: 0
       - name: Arrearage Description
         href: Pricing/Arrears.md
   - name: Getting Started
@@ -146,6 +145,11 @@
             href: API-Reference/CDN-Open-API/Query-total-data.md
           - name: Query UV
             href: API-Reference/CDN-Open-API/Query-uv.md
+          - name: Set/Delete Header
+            href: API-Reference/CDN-Open-API/Set-Header.md
+            status: 0
+          - name: Search Header
+            href: API-Reference/CDN-Open-API/Query-Header.md
           - name: Attachment: Notification Information Status Code Reference Table
             href: API-Reference/CDN-Open-API/Status-code-reference-table.md
       - name: Live OPEN API
