--- a/documentation/Database-and-Cache-Service/JCS-for-Redis/TOC.yml
+++ b/documentation/Database-and-Cache-Service/JCS-for-Redis/TOC.yml
@@ -45,10 +45,8 @@
         href: Getting-Started/Getting-Started-Overview.md
   - name: Operation Guide
     items:
-      - name: Login with Account
-        items:
-          - name: Account for Login
-            href: Operation-Guide/Login/Login.md
+      - name: Account for Login
+        href: Operation-Guide/Login.md
       - name: Instance Management
         items:
           - name: Change Configuration
@@ -62,7 +60,7 @@
       - name: Backup Recovery
         href: Operation-Guide/Backup-And-Recovery.md
       - name: Parameter Modification
-        href: Operation-Guide/Data-Migration.md
+        href: Operation-Guide/Parameter-Modification.md
       - name: Monitoring Alarm
         items:
           - name: View Monitoring Information
@@ -70,8 +68,8 @@
           - name: Set Alarm Rules
             href: Operation-Guide/Monitoring/Alarm-Rules.md   
       - name: Data Migration
-        href: Operation-Guide/Parameter-Modification.md   
-- name: Best Practices
+        href: Operation-Guide/Data-Migration.md   
+  - name: Best Practices
     items:
     - name: C/C++ Connect JCS for Redis Instance
       href: Best-Practices/CorCplusplus-Connect-to-Redis-Instance.md
